# proxmox-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/proxmox_mcp/: __init__.py  client.py  server.py
src/proxmox_mcp/tools/: __init__.py  backup.py  containers.py  network.py  nodes.py  storage.py  vms.py
